# connect3

./: .env-example  .gitignore  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/apps/posts/: admin.py  apps.py  models.py
backend/apps/posts/migrations/: 0001_initial.py  0002_alter_posts_options.py  0002_initial.py  0003_posts_is_ready.py
backend/apps/products/: admin.py  apps.py  models.py
backend/apps/products/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_name_and_more.py  0002_initial.py  0003_product_available.py  0004_alter_order_time.py  0005_alter_product_name.py
backend/apps/tgbot/: admin.py  apps.py  models.py
backend/apps/tgbot/bot/: consts.py  main.py  messages.py  middlewares.py
backend/apps/tgbot/migrations/: 0001_initial.py  0002_initial.py  0002_siteconfig_is_available_siteconfig_what_is_connect.py
backend/apps/tgbot/signals/: orders.py  users.py
backend/apps/users/: admin.py  factories.py  models.py  tests.py
backend/apps/users/api/: serializers.py  tests.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_userextended_about_me_userextended_birth_date_and_more.py  (+8 more)
backend/config/: settings.py  urls.py
backend/posts/: admin.py  apps.py  models.py
backend/products/: admin.py  models.py
backend/products/migrations/: 0001_initial.py
backend/users/: admin.py  factories.py  models.py  tests.py  urls.py
backend/users/api/: serializers.py  tests.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_userextended_qrcode.py
(+57 files in other folders)
